--- a/style.css
+++ b/style.css
@@ -509,6 +509,11 @@ body {
   margin: 0 2rem;
   cursor: pointer;
   box-shadow: 2px 2px 8px -3px black;
+  transition: all 0.3s;
+}
+
+.gallery-item:hover {
+  transform: scale(1.1);
 }
 
 .gallery-image {
@@ -678,7 +683,7 @@ body {
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  border: 1px solid transparent;
+  border: 3px solid transparent;
 }
 
 .thumbnail-img {
@@ -739,3 +744,6 @@ body {
     transform: translateX(-50%);
   }
 }
+
+
+/* Media Queries */
