--- a/style.css
+++ b/style.css
@@ -705,6 +705,77 @@ body {
   animation: fadeAnimation 0.3s ease-in-out;
 }
 
+#slide-pagination {
+  color: darkblue;
+  position: absolute;
+  top: 1%;
+  left: 1%;
+  background: rgba(255, 255, 255, 0.8);
+  font-family: appFontSemi;
+  padding: 0.3rem 0.6rem;
+  border-radius: 10px;
+  z-index: 2;
+}
+
+#menu-div {
+  position: relative;
+  display: flex;
+  padding: 0 0.5rem;
+}
+
+#menu-icon {
+  width: 2rem;
+  height: 2rem;
+  fill: black;
+  cursor: pointer;
+}
+
+#menu-icon:hover {
+  color: darkblue;
+}
+
+#menu-list {
+  z-index: 2;
+  position: absolute;
+  list-style-type: none;
+  top: 110%;
+  left: -160%;
+  background: white;
+  box-shadow: 2px 2px 10px -4px black;
+  border-radius: 5px;
+  color: darkblue;
+  margin: 0;
+  display: none;
+  padding: 0;
+}
+
+#menu-div:hover #menu-list {
+  display: block;
+}
+
+#menu-list li a {
+  color: darkblue;
+  text-decoration: none;
+  font-family: appFontSemi;
+  padding: 0.6rem 1.5rem;
+  display: block;
+}
+
+#menu-list li:first-child a,
+#menu-list li:first-child {
+  border-radius: 5px 5px 0 0;
+}
+
+#menu-list li:last-child a,
+#menu-list li:last-child {
+  border-radius: 0 0 5px 5px;
+}
+
+#menu-list a:hover {
+  background: darkblue;
+  color: white;
+}
+
 @keyframes fadeAnimation {
   from {
     opacity: 0;
@@ -745,5 +816,204 @@ body {
   }
 }
 
-
 /* Media Queries */
+
+@media screen and (max-width: 1100px) {
+  #animation-container {
+    font-size: 3rem;
+    margin-top: 5rem;
+  }
+
+  #projects {
+    padding: 3rem 2rem;
+  }
+
+  #projects-container {
+    grid-template-columns: 32% 32% 32%;
+    column-gap: 1.3%;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  #animation-container {
+    font-size: 2.5rem;
+    margin-top: 4rem;
+  }
+
+  #profile-image {
+    width: 19rem;
+    height: 19rem;
+  }
+
+  #projects {
+    padding: 3rem 2rem;
+  }
+
+  #projects-container {
+    grid-template-columns: 45% 45%;
+    column-gap: 2.5%;
+  }
+
+  #animation-section {
+    column-gap: 4rem;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  #animation-container {
+    font-size: 2rem;
+    margin-top: 3rem;
+  }
+
+  #profile-image {
+    width: 16rem;
+    height: 16rem;
+  }
+
+  #projects {
+    padding: 3rem 1rem;
+  }
+
+  #animation-section {
+    column-gap: 2rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  #animation-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    column-gap: 0;
+  }
+
+  #profile-image {
+    order: 1;
+    width: 100%;
+    height: 20rem;
+  }
+
+  #animation-container {
+    order: 2;
+    height: 10rem;
+  }
+
+  #skills {
+    padding: 0 2rem;
+  }
+
+  #skills-list {
+    grid-template-columns: calc(33% - 0.7rem) calc(33% - 0.7rem) calc(
+        33% - 0.7rem
+      );
+    justify-content: center;
+    column-gap: 1rem;
+    row-gap: 2rem;
+  }
+
+  #projects {
+    padding: 3rem 0;
+  }
+
+  #projects-container {
+    grid-template-columns: 60%;
+    column-gap: 0;
+  }
+
+  .header {
+    padding: 1.5rem 0.5rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #animation-section {
+    display: flex;
+    padding: 0 1rem;
+  }
+
+  #profile-image {
+    width: 100%;
+  }
+
+  .nav-list-item {
+    margin: 0 1rem;
+  }
+
+  .section-head {
+    margin-top: 20rem;
+  }
+
+  .skill-item {
+    padding: 1.5rem 1rem;
+    font-size: 1rem;
+  }
+
+  #projects-container {
+    grid-template-columns: 70%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .nav-list-item {
+    margin: 0 0.5rem;
+  }
+
+  .nav-list-item a {
+    font-size: 1rem;
+  }
+
+  .header {
+    padding: 1.5rem 0;
+  }
+
+  .nav-list-item:last-child a {
+    padding: 0.4rem 0.8rem;
+    font-size: 0.9rem;
+  }
+
+  .welcome-icon {
+    font-size: 1.6rem;
+  }
+
+  #profile-figure {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
+
+  #animation-container {
+    height: 12rem;
+  }
+
+  .section-head {
+    margin-top: 25rem;
+  }
+
+  .about-content {
+    padding: 0 1rem;
+    font-size: 1rem;
+  }
+
+  #skills {
+    padding: 0 1rem;
+  }
+
+  #skills-list {
+    grid-template-columns: 48% 48%;
+    column-gap: 4%;
+    row-gap: 2rem;
+  }
+
+  #projects-container {
+    grid-template-columns: 82%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .nav {
+    display: none;
+  }
+
+  #projects-container {
+    grid-template-columns: 95%;
+  }
+}
