--- a/style.css
+++ b/style.css
@@ -719,8 +719,8 @@ body {
 
 #menu-div {
   position: relative;
-  display: flex;
   padding: 0 0.5rem;
+  display: none;
 }
 
 #menu-icon {
@@ -832,6 +832,10 @@ body {
     grid-template-columns: 32% 32% 32%;
     column-gap: 1.3%;
   }
+
+  #lightbox-container {
+    width: 55%;
+  }
 }
 
 @media screen and (max-width: 1000px) {
@@ -857,6 +861,16 @@ body {
   #animation-section {
     column-gap: 4rem;
   }
+
+  #lightbox-container {
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  #lightbox-container {
+    width: 65%;
+  }
 }
 
 @media screen and (max-width: 800px) {
@@ -876,6 +890,14 @@ body {
 
   #animation-section {
     column-gap: 2rem;
+  }
+
+  .gallery-image {
+    width: 18rem;
+  }
+
+  #lightbox-container {
+    width: 70%;
   }
 }
 
@@ -923,6 +945,14 @@ body {
   .header {
     padding: 1.5rem 0.5rem;
   }
+
+  .gallery-image {
+    width: 15rem;
+  }
+
+  #lightbox-container {
+    width: 75%;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -950,6 +980,35 @@ body {
 
   #projects-container {
     grid-template-columns: 70%;
+  }
+
+  .gallery-image {
+    width: 15rem;
+  }
+
+  #lightbox {
+    padding: 1rem 0 2rem;
+  }
+
+  #thumbnail-div {
+    padding: 0 0.5rem;
+  }
+
+  #lightbox-container {
+    width: 80%;
+  }
+
+  #prev-arrow-box,
+  #next-arrow-box {
+    padding: 0.6rem;
+  }
+
+  #prev-arrow-box {
+    left: -15%;
+  }
+
+  #next-arrow-box {
+    right: -15%;
   }
 }
 
@@ -1006,6 +1065,31 @@ body {
   #projects-container {
     grid-template-columns: 82%;
   }
+
+  #lightbox-container {
+    width: 90%;
+  }
+
+  #prev-arrow-box,
+  #next-arrow-box {
+    padding: 0.5rem;
+  }
+
+  #prev-arrow-box {
+    left: -10%;
+  }
+
+  #next-arrow-box {
+    right: -10%;
+  }
+
+  #prev-arrow,
+  #next-arrow {
+    width: 0.7rem;
+    height: 1rem;
+    transform: scale(0.9);
+    stroke-width: 2.5px;
+  }
 }
 
 @media screen and (max-width: 400px) {
@@ -1015,5 +1099,17 @@ body {
 
   #projects-container {
     grid-template-columns: 95%;
+  }
+
+  #menu-div {
+    display: flex;
+  }
+
+  .gallery-image {
+    width: 13rem;
+  }
+
+  #lightbox-container {
+    width: 100%;
   }
 }
