Fix: Updated gallery section

--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ body {
   /* background: darkblue; */
   width: 100%;
   font-family: appFont;
-  padding: 3rem;
+  padding: 3rem 3rem 5rem;
   margin: 8rem 0 0;
 }
 
